# csai_question_answering_bot

./: .env  .gitignore  Dockerfile  Dockerfile_assistant  Dockerfile_uploader  README.md  docker-compose.yml  requirements.txt  skaffold.yaml  values.yaml
answer_generation/: answer.py  main.py  prompts.py  pyproject.toml
assistant_deploy/: skaffold.yaml  values.yaml
data_processing/: text_extractor.py
database/: Dockerfile  database.py  main.py  pyproject.toml  utils.py
file_upload_bot/: feedback.txt  main.py
src/answer_generation/: answer.py  prompts.py
src/as_bot/: main.py
src/assistant_bot/: feedback_db.py  feedbacks.sql  main.py  messages.py
src/data_processing/: text_extractor.py
src/database/: database.py
src/file_upload_bot/: main.py
src/tests/: test_answer.py  test_data.py
src/tg_bot/: main.py  ratings.sql
src/tg_bot/db/: chroma.sqlite3
src/uploader_bot/: main.py
src/utils/: authenticator.py  chunker.py  translator.py
tests/: test_answer.py  test_data.py
tg_bot/: Dockerfile  feedback_db.py  feedbacks.sql  main.py  messages.py  pyproject.toml
uploader_deploy/: skaffold.yaml  values.yaml
