[tool.poetry]
name = "csai_question_answering_bot"
version = "0.1.0"
description = "This bot is designed to answer questions from CSAI students"
authors = ["Artem Abaturov", "Artem Grigorash", "Sofia Petrenko"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.1"
aiogram = "^3.13.0"
httpx = "^0.27.2"
uvicorn = "^0.30.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"